# cmake-samples

sample1/: CMakeLists.txt  test.cc
sample2/: CMakeLists.txt  hello.cc  test.cc
sample3/: CMakeLists.txt  hello.h
sample4/: CMakeLists.txt
sample5/: CMakeLists.txt  hello.cc  hello.h  test.cc
sample5/os/: load.h
sample6/: CMakeLists.txt  hello.cc  hello.h  test.cc
sample6/test/: CMakeLists.txt  hello_unittest.cc
sample7/: CMakeLists.txt
sample7/com/vidal/example/: Sample.java
sample8/: CMakeLists.txt
sample8/cmake/: Maven.cmake
sample8/main/: CMakeLists.txt
sample8/main/com/vidal/example/: Sample.java
sample8/test/: CMakeLists.txt
sample8/test/com/vidal/example/: SampleTest.java
